# sagemaker-distilgpt2-endpoint

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_NOTES.md  README.md  pyproject.toml
.github/workflows/: deploy-vllm.yml  deploy.yml
api-gw/: README.md  lambda_function.py
code/: inference.py  requirements.txt
docs/: sagemaker_quotas.md
infra/: INTEGRATED.md  README.md  STANDALONE.md  api-gateway-lambda.yaml  delete-full-stack.sh  delete.sh  deploy-full-stack.sh  deploy.sh  full-stack.yaml
lambda/openai-proxy/: README.md  pyproject.toml
lambda/openai-proxy/src/openai_proxy/: __init__.py  handler.py
lambda/openai-proxy/tests/: test_handler.py
openwebui/: .env.example  README.md  docker-compose.yml  litellm_config.yaml  setup.sh  setup_env.sh
scripts/: README.md  cleanup.py  deploy.py  deploy_vllm.py  pyproject.toml  test_endpoint.py  test_openai_endpoint.py
scripts/src/sagemaker_tools/: __init__.py  cleanup.py  deploy_vllm.py  test_api_gateway.py  test_openai_endpoint.py
