[project]
name = "sagemaker-distilgpt2"
version = "0.1.0"
description = "Deploy and test a DistilGPT-2 language model on AWS SageMaker"
dependencies = [
    "boto3>=1.34.0",
    "transformers>=4.28.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"