[project]
name = "sagemaker-distilgpt2"
version = "1.0.0"
description = "Deploy and test a DistilGPT-2 language model on AWS SageMaker"
dependencies = [
    "boto3>=1.34.0",
    "transformers>=4.28.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true